Updated the file with new changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Graph Visualizer</title>
 </head>
 <body>
-    <h2>Graph Visualizer</h2>
+    <h2>Draw Graph & Visualize</h2>
     <canvas id="graphCanvas"></canvas>
     <div class="controls">
         <select id="traversalType">
